--- a/requirements.txt
+++ b/requirements.txt
@@ -34,13 +34,5 @@ jupyterlab_miami_nights
 ipywidgets>=8.0.0,<9
 # Python: ipyevents library for Jupyter notebooks (optional)
 ipyevents>=2.0.1
-# Python: interative Matplotlib library for Jupyter notebooks (optional)
-ipympl>=0.8.2
-# Python: ipycanvas library for Jupyter notebooks (optional)
-ipycanvas>=0.9.1
-# Python: ipyleaflet library for Jupyter notebooks (optional)
-ipyleaflet
-
-# Python: plotting libraries (optional)
-plotly>=5,<6
-bqplot
+# Python: NiiVue for Jupyter notebooks (optional)
+ipyniivue>=1.0.0
