--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # Core modules (mandatory)
-jupyterlite-core==0.1.0rc0
+jupyterlite-core==0.1.1
 jupyterlab~=3.5.1
 
 # Python kernel (optional)
-jupyterlite-pyodide-kernel==0.0.6
+jupyterlite-pyodide-kernel==0.0.10
 
 # JavaScript kernel (optional)
-jupyterlite-javascript-kernel==0.1.0b21
+jupyterlite-javascript-kernel==0.1.1
 
 # Language support (optional)
 jupyterlab-language-pack-fr-FR
@@ -34,5 +34,5 @@ jupyterlab_miami_nights
 ipywidgets>=8.0.0,<9
 # Python: ipyevents library for Jupyter notebooks (optional)
 ipyevents>=2.0.1
-# Python: NiiVue for Jupyter notebooks (optional)
+# Python: NiiVue for Jupiter notebooks
 ipyniivue>=1.1.0
